..F....... [ZBX-17968] fixed z-index issue in floating widget header
* commit '3314c85fb3d8886d3bf55f5ff78e1d31dfcef96e':
  ..F....... [ZBX-17968] fixed iterator z-index
  ..F....... [ZBX-17968] fixed z-index issue in floating widget header

(cherry picked from commit 831d4161d1608165f495903a7911527db6c023a1)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3159,6 +3159,7 @@ $form-icon-btn: (
 				height: 2rem;
 				margin-top: -2rem;
 				box-shadow: 0 -6px 8px -2px rgba(128, 128, 128, .15);
+				z-index: 5;
 			}
 		}
 	}
@@ -3323,6 +3324,8 @@ $form-icon-btn: (
 	}
 
 	&.dashbrd-grid-iterator-focus {
+		z-index: 5;
+
 		.dashbrd-grid-iterator-head {
 			margin-top: -2rem;
 			height: 2rem;
